# ace_school

./: .gitignore
myString/: CMakeLists.txt  main.cpp
myString/src/: ctohastring.cpp  ctohastring.h  main.cpp
